# snowflake-mcp-lambda

./: .env.example  .gitignore  .pre-commit-config.yaml  API_CONTRACT.md  CLAUDE.md  DEVELOPMENT.md  MVP_UI_UX_DESIGN_SPEC.md  Makefile  README.md  docker-compose.monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  plan.md  prompt_plan.md  pyproject.toml  sample_data.csv  setup-dev-environment.sh  todo.md  validate_config.py
.github/: SECURITY.md
.github/workflows/: ci.yml  claude-code-review.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_user_table.py  002_add_snowflake_connections.py
backend/app/: __init__.py  aggregation.py  health.py  logging.py  main.py  monitoring.py
backend/app/auth/: __init__.py  endpoints.py  jwt_utils.py  oauth_service.py  user_service.py
backend/app/config/: __init__.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/data/: __init__.py  endpoints.py  sqlite_adapter.py
backend/app/database/: __init__.py  config.py  connections.py  migrations.py  models.py  session.py
backend/app/llm/: __init__.py  endpoints.py  gemini_service.py
backend/app/models/: __init__.py  base.py  connection.py  user.py
backend/app/services/: csv_processor.py  file_management.py  file_processor.py
backend/app/snowflake/: __init__.py  connection_service.py  endpoints.py  schema_service.py
backend/tests/: __init__.py  conftest.py  test_app_integration.py  test_auth_endpoints.py  test_chat_endpoints.py  test_config.py  test_config_gemini.py  test_config_oauth.py  test_connection_endpoints.py  test_connection_service.py  test_csv_processor.py  test_data_endpoints.py  test_database.py  test_database_config.py  test_docker_production.py  test_env_file_loading.py  test_file_management.py  test_gemini_service.py  test_health.py  test_integration.py  test_logging.py  test_main.py  test_main_config_integration.py  test_migrations.py  test_monitoring.py  test_oauth_service.py  test_query_history_model.py  test_schema_service.py  test_session_management.py  test_simple_config.py  test_sqlite_adapter.py  test_user_model.py  test_user_service.py
docs/: DOCKER_LOCAL_POETRY_SEPARATION_FIX.md  POETRY_ENVIRONMENT_CONSISTENCY_FIX.md  PROJECT_STATUS.md  README.md  TEST_COMMAND_COMPARISON.md  TEST_COVERAGE_ANALYSIS.md
docs/archive/: CORRECTED_OPENAPI.md  spec_v2.md
docs/planning/: PROJECT_STATUS.md  plan.md  prompt_plan.md  spec.md  todo.md
docs/ui/: style.md
frontend/: .dockerignore  .env.example  .eslintrc.json  Dockerfile.dev  cypress.config.ts  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/cypress/e2e/: auth.cy.ts
frontend/cypress/support/: commands.ts  e2e.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/auth/: LoginButton.tsx  ProtectedRoute.tsx  UserMenu.tsx
frontend/src/components/chat/: ChatLayout.tsx  ChatMessage.tsx  ChatWindow.tsx  MessageBubble.tsx  PromptInput.tsx  ResultsTable.tsx  SQLConfirmationModal.tsx
frontend/src/components/data/: DataResults.tsx  SchemaPreview.tsx
frontend/src/components/icons/: ChatIcon.tsx  ChevronDownIcon.tsx  GoogleIcon.tsx  index.ts
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/monitoring/: ErrorBoundary.tsx  PerformanceMonitor.tsx
frontend/src/components/processing/: ProcessingScreen.tsx
frontend/src/components/schema/: SchemaSidebar.tsx
frontend/src/components/ui/: Button.tsx  Card.tsx  ErrorBoundary.tsx  Modal.tsx  ThemeToggle.tsx
frontend/src/components/upload/: FileUploadZone.tsx
frontend/src/components/upload/__tests__/: FileUploadZone.test.tsx
frontend/src/hooks/: useAuth.tsx  useClickOutside.ts  usePerformanceMetrics.ts
frontend/src/pages/: ChatPage.tsx  DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx
frontend/src/services/: adapters.ts  api.ts  auth.ts  chat.ts  fileUpload.ts  monitoring.ts
frontend/src/services/__tests__/: chat.test.ts  fileUpload.test.ts
frontend/src/test/: ChatWindow.test.tsx  LoginPage.test.tsx  setup.ts  utils.tsx
frontend/src/types/: api.ts  auth.ts  chat.ts  index.ts
frontend/src/utils/: auth-events.ts  cn.ts  env.ts  fileUtils.ts  id.ts
frontend/src/utils/__tests__/: fileUtils.test.ts
frontend/styleGuide/: style-guide.html
migrations/: alembic.ini  env.py  init.sql
migrations/versions/: 20241228_143000_000000_create_user_model.py  20241228_143100_000001_create_query_history_model.py
monitoring/: alert_rules.yml  alertmanager.yml  prometheus.yml
nginx/: default.conf  nginx.conf
scripts/: deploy.sh  init-db.sql  poetry-wrapper.sh  security-scan.sh  setup-dev.sh  setup-docker-dev.sh
styleGuide/: script.js  styles.css
templates/: chat.html  connect_db.html  landing.html  upload_data.html
